# ChangePointDetection

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: unittests.yml
data/: README.md
data/processed/: change_point_detection_results.dvc  oil_events.csv.dvc  oil_events.json.dvc
data/raw/: BrentOilPrices_raw.csv.dvc
docs/: README.md
notebooks/: Change_PointDetection_and_Impact_Analysis.ipynb  Data_ingestion.ipynb  EDA_and_Transformation.ipynb  README.md
scripts/: README.md
scripts/backend/: app.py
scripts/frontend/: README.md  package-lock.json
scripts/frontend/src/: App.css  App.js
scripts/frontend/src/components/: EventTable.js  ImpactAnalysis.js  PriceChart.js
src/models/: ruptures_config.py
src/utils/: change_point_deteciton_utils.py
tests/unit/: test_change_point_detection_utils.py  test_ruptures_config.py
